--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contacto</title>
+    <link rel="stylesheet" href="/CSS/styles.css">
+
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -15,12 +18,14 @@
 </head>
 
 <body>
+    <script src="/JS/master.js"></script>
+
 
     <header>
         <div>
             <nav class="navbar navbar-expand-lg rounded sticky-top" aria-label="Twelfth navbar example">
-                <div class="container-fluid">
-                    <img class="logoTop" src="/assets/logo_white_large.png" alt="">
+                <div class="container-fluid contBurger">
+                    <img class="logoTop" src="../assets/logo_white_large.png" alt="">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarsExample10" aria-controls="navbarsExample10" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -49,62 +54,70 @@
         </div>
     </header>
 
-    <main class="d-flex justify-content-center align-items-center flex-wrap">
-        <div class="contacto my-5 formulario ml-5">
-            <form>
-                <div class="mb-3">
-                    <label for="nombre" class="form-label">Nombre:</label>
-                    <input type="text" name="Nombre" class="form-control" id="nombre">
-                </div>
-                <div class="mb-3">
-                    <label for="apellido" class="form-label">Apellido:</label>
-                    <input type="text" name="Apellido" class="form-control" id="apellido">
-                </div>
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email:</label>
-                    <input type="email" name="Email" class="form-control" id="email" placeholder="email@email.com">
-                </div>
-                <div class="mb-3">
-                    <label for="telefono" class="form-label">Teléfono:</label>
-                    <input type="number" name="Telefono" class="form-control" id="telefono">
-                </div>
-                <div class="mb-3 ">
-                    <p>Seleccione mascota:</p>
-                    <label><input class="form-check-input" type="checkbox" name=Mascota value="Perro">Perro</label>
-                    <label><input class="form-check-input" type="checkbox" name=Mascota value="Gato">Gato</label>
+    <main class="container-fluid">
 
-                </div>
+        <div class="row d-flex justify-content-center align-items-center flex-wrap">
+            <div class="col-sm-4 contacto mx-5 my-5 formulario justify-content-center align-items-center">
+                <form id="contactForm">
+                    <div class="mb-2">
+                        <label for="nombre" class="form-label">Nombre:</label>
+                        <input type="text" name="Nombre" class="form-control" id="nombre">
+                    </div>
+                    <div class="mb-2">
+                        <label for="apellido" class="form-label">Apellido:</label>
+                        <input type="text" name="Apellido" class="form-control" id="apellido">
+                    </div>
+                    <div class="mb-2">
+                        <label for="email" class="form-label">Email:</label>
+                        <input type="email" name="Email" class="form-control" id="email" placeholder="email@email.com">
+                    </div>
+                    <div class="mb-2">
+                        <label for="telefono" class="form-label">Teléfono:</label>
+                        <input type="number" name="Telefono" class="form-control" id="telefono">
+                    </div>
+                    <div class="mb-2 ">
+                        <p>Seleccione mascota:</p>
+                        <label><input class="form-check-input" type="checkbox" name=Mascota value="Perro">Perro</label>
+                        <label><input class="form-check-input" type="checkbox" name=Mascota value="Gato">Gato</label>
 
-                <div class="mb-3">
-                    <label for="comentario" class="form-label">Comentarios:</label>
-                    <textarea name="Comentarios" class="form-control" id="comentario" rows="3"></textarea>
-                </div>
+                    </div>
 
-                <button type="submit" class="btn btn-dark">Subir</button>
-            </form>
+                    <div class="mb-2">
+                        <label for="comentario" class="form-label">Comentarios:</label>
+                        <textarea name="Comentarios" class="form-control" id="comentario" rows="3"></textarea>
+                    </div>
 
+                    <button type="submit" class="btn btn-dark">Subir</button>
+                </form>
 
-        </div>
-
-        <div>
-            <div>
-                <p>Visítanos en Rio de Janeiro 300, Caballito, CABA:</p>
 
             </div>
 
-            <div>
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.6869258109564!2d-58.43257238440446!3d-34.61207738045731!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca429815227f%3A0x5d302e497c2cda87!2sR%C3%ADo%20de%20Janeiro%20300%2C%20C1405CCB%20CABA!5e0!3m2!1ses!2sar!4v1653943387484!5m2!1ses!2sar"
-                    width="600" height="440" style="border:0;"></iframe>
+            <div class="col-sm-4 mx-5 mb-5 justify-content-center align-items-center">
+                <div class="mapText">
+                    <p>Visítanos en Rio de Janeiro 300, Caballito, CABA:</p>
+
+                </div>
+
+                    <div class="map-responsive">
+                        <iframe 
+                            src="https://maps.google.com/maps?q=rio%20de%20janeiro%20300%20caballito&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                    </div>
+                </div>
             </div>
+
         </div>
-
-
-
+        <a href="./carrito.html" class="car-button d-flex align-items-center text-white">
+            <svg xmlns="http://www.w3.org/2000/svg" width="1.2rem" height="1.2rem" fill="currentColor" class="bi bi-cart-fill" viewBox="0 0 16 16">
+                <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+            </svg>
+            <p id="cantidad-productos"></p>
+        </a>
 
     </main>
 
-    <footer class="sticky-bottom mt-auto py-2 bg-light footer">
+    <footer class="sticky-bottom mt-auto py-2 footer">
         <div class="container-fluid row align-items-center justify-content-center d-flex flex-wrap rowfooter">
             <div class="col-sm-6 mb-1 mt-1">
                 <a href="#" target="_blank" class="footericons">
@@ -130,17 +143,20 @@
                 </a>
             </div>
             <div class="col-sm-6 mb-1 mt-1">
-                <span class="textFooter">COHORT FS028 - Grupo 11</span>
+                <span class="textFooter">Todos los derechos reservados ® MINDY 2022</span>
             </div>
         </div>
     </footer>
 
 
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="../JS/botonCarrito.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <script src="../JS/contacto.js"></script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js" ></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 </body>
 
-</html>
+</html> 
