--- a/HTML/farmacia.html
+++ b/HTML/farmacia.html
@@ -72,11 +72,17 @@
 			</div>
             <!------------------------------->
 			
+            <a href="./carrito.html" class="car-button d-flex align-items-center text-white">
+                <svg xmlns="http://www.w3.org/2000/svg" width="1.2rem" height="1.2rem" fill="currentColor" class="bi bi-cart-fill" viewBox="0 0 16 16">
+                    <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                </svg>
+                <p id="cantidad-productos"></p>
+            </a>
 		
 	</main>
 	
 
-    <footer class="sticky-bottom mt-auto py-2 bg-light footer">
+    <footer class="sticky-bottom mt-auto py-2 footer">
         <div class="container-fluid row align-items-center justify-content-center d-flex flex-wrap rowfooter">
             <div class="col-sm-6 mb-1 mt-1">
                 <a href="#" target="_blank" class="footericons">
@@ -102,13 +108,14 @@
                 </a>
             </div>
             <div class="col-sm-6 mb-1 mt-1">
-                <span class="textFooter">COHORT FS028 - Grupo 11</span>
+                <span class="textFooter">Todos los derechos reservados ® MINDY 2022</span>
             </div>
         </div>
     </footer>
 
 
     <!-- JavaScript Bundle with Popper -->
+    <script src="../JS/botonCarrito.js"></script>
 	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="../JS/farmacia.js"></script>
