--- a/HTML/index.html
+++ b/HTML/index.html
@@ -54,7 +54,11 @@
         </div>
     </header>
 
-    <main class="container-fluid d-flex flex-column align-items-center justify-content-end">
+
+                <!---------------------------------------------->
+
+                
+    <main class="container-fluid d-flex flex-column align-items-center justify-content-start ">
 
         <div class="d-flex flex-column div1">
             <h1>Bienvenidos a PETSHOP MINDY</h1>
@@ -72,21 +76,21 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../ASSETS/gatito_y_perro.jpg" class="d-block w-100 imagen" alt="imagen gatito y perro">
+                    <img src="../ASSETS/Foto1.jpg" class="d-block w-100 imagen" alt="imagen gatito y perro">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="presentacion">Somos amantes de los animales</h5>
                         <p class="presentacion">Y estamos comprometidos con su bienestar.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../ASSETS/perrito.jpg" class="d-block w-100 imagen" alt="imagen perrito">
+                    <img src="../ASSETS/Foto2.jpg" class="d-block w-100 imagen" alt="imagen perrito">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="presentacion">Por eso les ofrecemos un servicio de farmacia y juguetería</h5>
                         <p class="presentacion">Con altos estándares de calidad.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../ASSETS/gatito.jpg" class="d-block w-100 imagen" alt="imagen gatito">
+                    <img src="../ASSETS/Foto3.jpg" class="d-block w-100 imagen" alt="imagen gatito">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="presentacion">Para que aquellos que alegran nuestra vida diariamente</h5>
                         <p class="presentacion">Tengan el cuidado y amor que se merecen.</p>
@@ -110,6 +114,13 @@
         <div>
             <h5>Echen un vistazo a nuestra tienda...</h5>
         </div>
+
+        <a href="./carrito.html" class="car-button d-flex align-items-center text-white">
+			<svg xmlns="http://www.w3.org/2000/svg" width="1.2rem" height="1.2rem" fill="currentColor" class="bi bi-cart-fill" viewBox="0 0 16 16">
+				<path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+			</svg>
+			<p id="cantidad-productos"></p>
+		</a>
 
 
     </main>
@@ -140,7 +151,7 @@
                 </a>
             </div>
             <div class="col-sm-6 mb-1 mt-1">
-                <span class="textFooter">COHORT FS028 - Grupo 11</span>
+                <span class="textFooter">Todos los derechos reservados ® MINDY 2022</span>
             </div>
         </div>
     </footer>
@@ -149,6 +160,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
+        <script src="../JS/botonCarrito.js"></script>
+
 </body>
 
 </html>
