Pusimos HTML fuera, final del proyecto 00:57Hs 1/6/2022

--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -32,10 +32,10 @@
                     <div class="collapse navbar-collapse justify-content-end " id="navbarsExample10">
                         <ul class="navbar-nav menu">
                             <li class="nav-item">
-                                <a class="nav-link" href="./index.html">Inicio</a>
+                                <a class="nav-link" href="../index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="./contacto.html">Contacto</a>
+                                <a class="nav-link active" href="#">Contacto</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./farmacia.html">Farmacia</a>
@@ -109,10 +109,7 @@
     </main>
 
     <footer class="sticky-bottom mt-auto py-2 footer">
-<<<<<<< HEAD
-=======
         
->>>>>>> Andres
         <div class="container-fluid row align-items-center justify-content-center d-flex flex-wrap rowfooter">
             <div class="col-sm-6 mb-1 mt-1">
                 <a href="#" target="_blank" class="footericons">
