--- a/HTML/farmacia.html
+++ b/HTML/farmacia.html
@@ -27,13 +27,13 @@
                     <div class="collapse navbar-collapse justify-content-end " id="navbarsExample10">
                         <ul class="navbar-nav menu">
                             <li class="nav-item">
-                                <a class="nav-link" href="./index.html">Inicio</a>
+                                <a class="nav-link" href="../index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./contacto.html">Contacto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="./farmacia.html">Farmacia</a>
+                                <a class="nav-link active" href="#">Farmacia</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./juguetes.html">Jugueteria</a>
