--- a/HTML/carrito.html
+++ b/HTML/carrito.html
@@ -31,7 +31,7 @@
                     <div class="collapse navbar-collapse justify-content-end " id="navbarsExample10">
                         <ul class="navbar-nav menu">
                             <li class="nav-item">
-                                <a class="nav-link" href="./index.html">Inicio</a>
+                                <a class="nav-link" href="../index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./contacto.html">Contacto</a>
