--- a/HTML/juguetes.html
+++ b/HTML/juguetes.html
@@ -27,7 +27,7 @@
                     <div class="collapse navbar-collapse justify-content-end " id="navbarsExample10">
                         <ul class="navbar-nav menu">
                             <li class="nav-item">
-                                <a class="nav-link" href="./index.html">Inicio</a>
+                                <a class="nav-link" href="../index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./contacto.html">Contacto</a>
@@ -36,7 +36,7 @@
                                 <a class="nav-link" href="./farmacia.html">Farmacia</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="./juguetes.html">Jugueteria</a>
+                                <a class="nav-link active" href="#">Jugueteria</a>
                             </li>
                         </ul>
                     </div>
