--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="../CSS/styles.css">
-    <link rel="shortcut icon" href="../ASSETS/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./CSS/styles.css">
+    <link rel="shortcut icon" href="./ASSETS/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -25,7 +25,7 @@
         <div>
             <nav class="navbar navbar-expand-lg rounded sticky-top" aria-label="Twelfth navbar example">
                 <div class="container-fluid contBurger">
-                    <img class="logoTop" src="../assets/logo_white_large.png" alt="">
+                    <img class="logoTop" src="./assets/logo_white_large.png" alt="">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarsExample10" aria-controls="navbarsExample10" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -35,16 +35,16 @@
                     <div class="collapse navbar-collapse justify-content-end " id="navbarsExample10">
                         <ul class="navbar-nav menu">
                             <li class="nav-item">
-                                <a class="nav-link active" href="./index.html">Inicio</a>
+                                <a class="nav-link active" href="#">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./contacto.html">Contacto</a>
+                                <a class="nav-link" href="HTML/contacto.html">Contacto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./farmacia.html">Farmacia</a>
+                                <a class="nav-link" href="HTML/farmacia.html">Farmacia</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./juguetes.html">Jugueteria</a>
+                                <a class="nav-link" href="HTML/juguetes.html">Jugueteria</a>
                             </li>
                         </ul>
                     </div>
@@ -75,21 +75,21 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../ASSETS/Foto1.jpg" class="d-block w-100 imagen" alt="imagen gatito y perro">
+                    <img src="./ASSETS/Foto1.jpg" class="d-block w-100 imagen" alt="imagen gatito y perro">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="presentacion">Somos amantes de los animales</h5>
                         <p class="presentacion">Y estamos comprometidos con su bienestar.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../ASSETS/Foto2.jpg" class="d-block w-100 imagen" alt="imagen perrito">
+                    <img src="./ASSETS/Foto2.jpg" class="d-block w-100 imagen" alt="imagen perrito">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="presentacion">Por eso les ofrecemos un servicio de farmacia y juguetería</h5>
                         <p class="presentacion">Con altos estándares de calidad.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../ASSETS/Foto3.jpg" class="d-block w-100 imagen" alt="imagen gatito">
+                    <img src="./ASSETS/Foto3.jpg" class="d-block w-100 imagen" alt="imagen gatito">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="presentacion">Para que aquellos que alegran nuestra vida diariamente</h5>
                         <p class="presentacion">Tengan el cuidado y amor que se merecen.</p>
@@ -112,7 +112,7 @@
             <h5>Echen un vistazo a nuestra tienda...</h5>
         </div>
 
-        <a href="./carrito.html" class="car-button d-flex align-items-center text-white">
+        <a href="HTML/carrito.html" class="car-button d-flex align-items-center text-white">
 			<svg xmlns="http://www.w3.org/2000/svg" width="1.2rem" height="1.2rem" fill="currentColor" class="bi bi-cart-fill" viewBox="0 0 16 16">
 				<path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
 			</svg>
@@ -140,7 +140,7 @@
                             d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
                     </svg>
                 </a>
-                <a href="./contacto.html" target="_blank" class="footericons">
+                <a href="HTML/contacto.html" target="_blank" class="footericons">
                     <svg xmlns="http://www.w3.org/2000/svg" width="1.5rem" height="1.5rem" fill="antiquewhite"
                         class="bi bi-whatsapp ms-1 me-1 mt-1 mb-1 text-muted" viewBox="0 0 16 16">
                         <path
